[package]
name = "jk"
version = "0.1.0"
authors = ["Guillaume Leroi <guillaume-externe.leroi@enedis.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart", "cookies"] }
#scraper = { version= "0.12" }
anyhow = { version = "1.0" }
clap = { version = "3.0.0-beta.2" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
uuid = { version = "0.8", features = ["v4"] }
