[package]
name = "jk"
version = "0.1.0"
authors = ["Guillaume Leroi <guillaume-externe.leroi@enedis.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart", "cookies"] }
tungstenite = { version = "0.13" }
anyhow = { version = "1.0" }
clap = { version = "3.0.0-beta.2" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
uuid = { version = "0.8", features = ["v4"] }
base64 = { version = "0.13" }
pipe = { version = "0.4" }
