[package]
name = "ajk"
version = "0.1.0"
authors = ["Guillaume Leroi <guillaume@leroi.re>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
hyper-proxy = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = { version = "0.13" }
anyhow = { version = "1.0" }
clap = { version = "3.0.0-beta.2" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
dirs = { version = "3.0" }
